--- a/legends of rock/index.html
+++ b/legends of rock/index.html
@@ -15,16 +15,15 @@
     <section id="social-container">
       <div class="row align-center text-center"> <!-- align-center(centrar columna)  text-center(Aliniar texto) -->
         <div class="small-1 columns">
-          <a href="#" target="_blank"> <!-- target= es para abrir en otra pagina -->
-          <i class="fi-social-facebook"></i>
+              <!-- target="_blank" Es para abrir en otra pagina -->
+              <!-- class="fi-social-facebook" Es para insertar al icono. -->
+            <a href="#" target="_blank"><i class="fi-social-facebook"></i></a>
         </div>
         <div class="small-1 columns">
-          <a href="#" target="_blank"> <!-- target= es para abrir en otra pagina -->
-          <i class="fi-social-twitter"></i>
+            <a href="#" target="_blank"><i class="fi-social-twitter"></i></a>
         </div>
         <div class="small-1 columns">
-          <a href="#" target="_blank"> <!-- target= es para abrir en otra pagina -->
-          <i class="fi-social-instagram"></i>
+          <a href="#" target="_blank"><i class="fi-social-instagram"></i></a>
         </div>
       </div>
     </section>
@@ -35,10 +34,52 @@
       <div class="callout text-center">
         <h1>Legends of Rock</h1>
       </div>
-
     </section>
-
     <!-- logo -->
+
+    <!-- Menu -->
+    <section id="menu-container">
+      <ul class="dropdown menu align-spaced" data-dropdown-menu >
+        <!-- se le agregamos icon -top podemos poner los iconos arriba del texto -->
+          <!-- align-spaced permite el espacio anuestro menu -->
+        <li>
+          <a href="#">Tickets</a>
+          <ul class="menu">
+            <li><a href="#">Viernes</a></li>
+            <li><a href="#">Sabado</a></li>
+            <li><a href="#">Domingo</a></li>
+          </ul>
+        </li>
+          <li>
+            <a href="#">Lineup</a>
+            <ul id="submenu-container" class="menu">
+              <li><a href="#">Viernes</a></li>
+              <li><a href="#">Sabado</a></li>
+              <li><a href="#">Domingo</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Info</a>
+              <ul class="menu">
+                <li><a href="#">viernes</a></li>
+
+              </ul>
+            </li>
+            <li>
+              <a href="#">Suscríbete</a>
+                <ul class="menu">
+                  <li><a href="#">Item 1A</a></li>
+                  <!-- ... -->
+                </ul>
+              </li>
+
+        </ul>
+    </section>
+    <!-- Menu -->
+
+    <ul class="dropdown menu" data-dropdown-menu>
+
+</ul>
 
 
 
